// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options validation Fails with empty options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "defaults": Object {
          "environment": "master",
          "host": "cdn.contentful.com",
        },
        "errors": Object {
          "accessToken": "\\"accessToken\\" is not allowed to be empty",
          "environment": "\\"environment\\" is not allowed to be empty",
          "host": "\\"host\\" is not allowed to be empty",
          "spaceId": "\\"spaceId\\" is not allowed to be empty",
        },
        "options": Object {
          "accessToken": "",
          "environment": "",
          "host": "",
          "spaceId": "",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Options validation Fails with missing options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "defaults": Object {
          "environment": "master",
          "host": "cdn.contentful.com",
        },
        "errors": Object {
          "accessToken": "\\"accessToken\\" is required",
          "spaceId": "\\"spaceId\\" is required",
        },
        "options": Object {},
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Options validation Fails with options of wrong types 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "defaults": Object {
          "environment": "master",
          "host": "cdn.contentful.com",
        },
        "errors": Object {
          "accessToken": "\\"accessToken\\" must be a string",
          "environment": "\\"environment\\" must be a string",
          "host": "\\"host\\" must be a string",
          "spaceId": "\\"spaceId\\" must be a string",
        },
        "options": Object {
          "accessToken": true,
          "environment": 1,
          "host": Array [],
          "spaceId": Object {},
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
